# LSM6DSOX_RPi

./: CMakeCache.txt  CMakeLists.txt  LICENSE  LSM6DSOX.cpp  LSM6DSOX.h  LSM6DSOXSample.h  LSM6DSOX_Registers.h  README.md  cmake_install.cmake  lsm6dsox_reg.c  lsm6dsox_reg.h
test/: CMakeLists.txt  unit_test.cpp
