cmake_minimum_required(VERSION 3.1.0)

set(CMAKE_CXX_STANDARD 17)

project(LSM6DSOX_Rpi VERSION 1.0.0 LANGUAGES CXX)

file(GLOB src "*.cpp")

file(GLOB include "*.h")

add_library(LSM6DSOX_Rpi SHARED ${src})

set_target_properties(LSM6DSOX_Rpi PROPERTIES PUBLIC_HEADER *.h)

target_link_libraries(LSM6DSOX_Rpi gpiod)

install(TARGETS LSM6DSOX_Rpi EXPORT LSM6DSOX_Rpi-targets
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

